-
Bug
-
Resolution: Done
-
P2: Important
-
4.7.1
-
None
-
eeea1dd085d4712ce78166bdf8769e4270e2d831
Run attached QML. I have C++'fied the model at http://doc.qt.nokia.com/4.7-snapshot/qml-listview.html#section.criteria-prop.
On startup it looks like beforeclick.png (correct)
After clicking on the listview, it looks like afterclick.png (incorrect). Painting errors (well, really delegate management errors)
Scrolling the view will fix the painting errors
Keep scrolling in up/down. Sometimes the view just gets stuck. scrollbug.png
There are also warning in console:'Unable to assign undefined value'
I have been unable to reproduce this with a QML ListElement model (i.e a C++ model is required)