Ensure layout is updated when section property changes.

When the section property changed the sections were recalculated,
but the items were not relayouted.
Also avoid 'Unable to assign undefined value' warning by setting
section item parent before component is completed.

Change-Id: I7bd8eb369877a6faf72b32b80b45a68366c95772
Task-number: QTBUG-17759
Reviewed-by: Michael Brasser